--- a/core/services/versionchooser/frontend/index.html
+++ b/core/services/versionchooser/frontend/index.html
@@ -100,7 +100,7 @@
                       type="text"
                       v-model="selectedImage"
                       required="required"
-                      placeholder="The remote repo (usually bluerobotics/blueos-core)"
+                      placeholder="The remote repo (usually coratia/blueos-core)"
                       id="repo"
                       class=""
                     >
@@ -205,7 +205,7 @@
           currentVersion: '',
           waiting: false,
           loadingImages: false,
-          selectedImage: 'bluerobotics/blueos-core',
+          selectedImage: 'coratia/blueos-core',
           Metro: null,
           deleting: null, // image currently being deleted, if any
           error: null,
